# apps

./: .gitignore  ArgumentParser.hs  Find.hs  FindGrepSed.hs  Makefile  Test.hs  find-grep-sed.cabal  option-parser.cabal  privateUseOnly
args-parser/: args-parser.cabal
args-parser/examples/: ArgsParserTest.hs
catalog/: .gitignore  catalog.cabal  stack.yaml  versionbump.sh
catalog/catalog-servant/: LICENSE  catalog-servant.cabal
catalog/catalog-servant/app/: API.hs  Main.hs  Server.hs
catalog/catalog-server/: Json.hs  Main.hs  ServerOptions.hs  catalog-server.cabal
catalog/catalog-sync/: Main.hs  catalog-sync.cabal
catalog/data/: .gitignore  edit.html  test.html
catalog/data/assets/css/: edit.css  html-album.css
catalog/data/assets/html/: edit.html  index.html  test.html
catalog/data/assets/javascript/: catalog-server.json  edit.js  html-album.js  rpc-scotty.js  rpc-servant.js
catalog/data/photos/2015/: _uwe3220.nef.dop  _uwe3220.xmp  _uwe3224.nef.dop  _uwe3224.xmp
catalog/data/photos/2016/: _uwe3104.xmp  _uwe3105.xmp  _uwe3106.nef.dop  _uwe3106.xmp
catalog/src/: Main.hs
catalog/src/Catalog/: Cmd.hs  FilePath.hs  Html.hs  Journal.hs  Json.hs  JsonCommands.hs  Main.hs  Options.hs  Prelude.hs  Rule.hs  Rules.hs  RunImgAction.hs  Sync.hs  Workflow.hs  Zip.hs
catalog/src/Catalog/Cmd/: ArchiveCollection.hs  Basic.hs  CWN.hs  CopyRemove.hs  Fold.hs  Invariant.hs  List.hs  Remove.hs  Types.hs
catalog/src/Catalog/Html/: Basic.hs  Blaze2.hs  Cache.hs  Photo2.hs
catalog/src/Catalog/System/: CatalogIO.hs  Convert.hs  ExifTool.hs  IO.hs  ImportPhoto2.hs
catalog/src/Control/Lens/: Util.hs
catalog/src/Data/: Catalog.hs  ImageStore.hs  ImageTree.hs  ImgAction.hs  ImgNode.hs  ImgTree.hs  MetaData.hs  Prim.hs  RefTree.hs
catalog/src/Data/Function/: Util.hs
catalog/src/Data/Prim/: CheckSum.hs  Constants.hs  GPS.hs  Geometry.hs  ImageType.hs  Name.hs  ObjId.hs  Path.hs  PathId.hs  Prelude.hs  SysPath.hs  TimeStamp.hs
catalog/src/Server/: Main.hs
catalog/src/Text/: SimpleParser.hs  SimpleTemplate.hs  SimpleTemptale.hs
dsl-lib/: .ghci  dsl-lib.cabal  stack.yaml
dsl-lib/src/: LuaTest.hs  SampleDSL.hs  TclParser.hs  TclTest.hs  Test.hs  TestDSL.hs  rts.lua
dsl-lib/src/DSL/: Base.hs  CommandLoop.hs  Interpreter.hs  ReadLineLoop.hs  SimpleLineLoop.hs
dsl-lib/src/Data/List/: MergeSort.hs
dsl-lib/src/Language/Common/: Eval.hs  EvalOptions.hs  REPL.hs
dsl-lib/src/Language/JavaScript/: JSTypes.hs
dsl-lib/src/Language/Lua/: AST.hs  Compile.hs  CompileState.hs  GenCode.hs  Instr.hs  Parser.hs  T.hs  Token.hs  VM.hs  Value.hs
fgs2/: .gitignore  FindGrepSedHash.hs  LICENSE  fgs2.cabal  stack.yaml
fgs2/Control/Monad/: RWSErrorIO.hs
fgs2/System/DirTree/: CmdTheLine.hs  Core.hs  FilePath.hs  FileSystem.hs  FindExpr.hs  Hash.hs  Types.hs
figure.game/: Makefile  figure.cabal
figure.game/app/: Main.hs
figure.game/src/: Board.hs  Figure.hs  Puzzles.hs
find-grep-sed/: .gitignore  Makefile  find-grep-sed.cabal  stack.yaml
find-grep-sed/examples/: Find.hs
find-grep-sed/examples/Tests/: Ascii.html  Ascii.tcl  Umlaut.tcl
find-grep-sed/src/System/: FindGrepSed.hs
finite-automaton/: .gitignore  finite-automaton.cabal  stack.yaml
finite-automaton/app/: Examples.hs  Main.hs  oldstuff.hs
finite-automaton/examples/autos/: .gitignore  Makefile
finite-automaton/src/Automaton/: Core.hs  GenCode.hs  GenDot.hs  Run.hs  ScanSpec.hs  Transform.hs  Types.hs
finite-automaton/src/Regex/: Core.hs  Parse.hs
finite-automaton/src/Text/: Utils.hs
kuboble/: CHANGELOG.md  cabal.project  kuboble.cabal
kuboble/app/: Main.hs
kuboble/src/: Kuboble.hs
monad-error-rws-io/: .gitignore  Checksum.hs  RWSTest.hs  monad-error-rws-io.cabal
monad-error-rws-io/Control/Monad/: RWSErrorIO.hs
monad-error-rws-io/System/DirTree/: CmdTheLine.hs  Core.hs  FileSystem.hs  FindExpr.hs  Hash.hs  Types.hs
photo2/: .gitignore  photo2.cabal  photo2.cabal.org  photo2.cabal.photo2  photo2.cabal.photoEdit  stack.yaml
photo2/photo2/: .ghci  LICENSE  Photo2.hs  photo2.cabal
photo2/photoEdit/: .ghci  PhotoEdit.hs  photoEdit.cabal
photo2/src/: Photo2.hs  PhotoEdit.hs
photo2/src/Photo2/: ArchiveTypes.hs  Arrow.hs  CmdInterpreter.hs  Config.hs  DataModell.hs  ExifData.hs  FilePath.hs  Html.hs  ImageOperations.hs  ImportDialog.hs  ModelInterface.hs  Pickler.hs  SearchNewImages.hs  ToJson.hs
photo2/test/: .gitignore  A.hs  Main.hs  Makefile  archive2.xml
photo2/test/album2/: Hagenbeck.xml
photo2/test/config/: archive.dtd  archive.xml  archive2.xml  html-1024x768-picture-template.xml  html-1024x768.css  html-1400x1050-album-template.xml  html-1400x1050-picture-template.xml  html-1600x1200-album-template.xml  html-1600x1200-picture-template.xml  html-album.js  template-album.xml  template-picture.xml
ppl/: .gitignore  Makefile  README  ppl.cabal
ppl/examples/: .gitignore  Makefile  angela.ppm  branch.ppl  cond1.ppl  example.ppl  expr.ppl  expr0.ppl  expr1.ppl  fib.ppl  gamma.ppl  ggt.ppl  hello.ppl  jump.ppl  loadpic.ppl  papa.ppm  stmt.ppl  t.ppl  tailRecursion.ppl  ttt.ass  ttt.gencode  ttt.ppl  wavelet.ppl
ppl/examples/c/: vm.h
ppl/examples/org/: king.pgm  lena.pgm  lena.ppm
ppl/src/: .gitignore  Makefile  PPL.hs  Parser.y
ppl/src/ImgFct/: Image.hs
ppl/src/Matrix/: Matrix.hs  Picture.hs  Ppm.hs
ppl/src/PPL/: AbstractSyntax.hs  Assemble.hs  BuiltinFunctions.hs  CodeGeneration.hs  ControlUnit.hs  Error.hs  GlobalState.hs  Instructions.hs  Lexer.hs  Loader.hs  MachineArchitecture.hs  Makefile  MicroCode.hs  NTree.hs  OPCode.hs  OptimizeInstr.hs  PPLInterpreter.hs  Peephole.hs  Picture.hs  SemanticAnalysis.hs  ShowAbstractSyntaxTree.hs  ShowAttrTree.hs  ShowCCode.hs  ShowCode.hs  ShowJavaCode.hs  ShowMS.hs  StateTrans.hs  Symbol.hs
puzzle-lib/: CHANGELOG.md  puzzle-lib.cabal
puzzle-lib/src/Algorithms/: AStar.hs
puzzle-lib/src/Data/: Board.hs
series/: Main.hs  series.cabal  stack.yaml
toys/adventofcode.com/: LICENSE  README.md  adventofcode.cabal  stack.yaml
toys/adventofcode.com/Data/: Graph.hs  Relation.hs
toys/adventofcode.com/Util/: Main1.hs
(+508 files in other folders)
