Cabal-Version:  >= 1.2
Name:           args-parser
Version:        0.1.0
Copyright:      2008, Uwe Schmidt
Maintainer:     uwe@fh-wedel.de
Author:         Uwe Schmidt
Homepage:       http://www.fh-wedel.de/~si/
-- License:        privateUseOnly
License-file:	privateUseOnly
Category:       Tools
Build-type:     Simple
Synopsis:       Option and command line args parsing and interpretation
Description:
    Option definition and parsing in a more flexible way than getopts

Library
    build-depends: base >= 3, parsec >= 2.0 && < 3.0

    GHC-Options: -Wall
    Exposed-modules:
        System.Console.ArgumentParser

Executable args-parser
    Main-Is: ArgsParserTest.hs
    GHC-Options: -Wall
