Cabal-Version:  >= 1.2
Name:           args-parser
Version:        0.1.1
Copyright:      Copyright (c) 2010 Uwe Schmidt
Maintainer:     uwe@fh-wedel.de
Author:         Uwe Schmidt
Homepage:       http://www.fh-wedel.de/~si/
-- License:        privateUseOnly
License-file:	privateUseOnly
Category:       Tools
Build-type:     Simple
Synopsis:       Option and command line args parsing and interpretation
Description:
  Option definition and parsing in a more flexible way than getopts

Library
  build-depends: base >= 4
               , parsec >= 2.1 && < 4

  hs-source-dirs: src

  GHC-Options: -Wall  -fno-warn-unused-do-bind

  Exposed-modules:
    System.Console.ArgumentParser

Executable args-parser
  hs-source-dirs: examples, src

  Main-Is: ArgsParserTest.hs

  GHC-Options: -Wall  -fno-warn-unused-do-bind
