name:                catalog
version:             0.1.0.0
synopsis:            Image catalog
description:         Please see README.md
homepage:            http://github.com/UweSchmidt/apps/catalog#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           Uwe Schmidt
category:            development
build-type:          Simple
cabal-version:       >=1.10

library: catalog
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:   Catalog.Main
                     Data.MetaData
                     Data.ImgAction
                     Data.ImgNode
                     Data.ImgTree
                     Data.RefTree
                     Data.ImageStore
                     Data.Prim
                     Data.Prim.ImageType
                     Data.Prim.Name
                     Data.Prim.TimeStamp
                     Data.Prim.Path
                     Data.Prim.PathId
                     Data.Prim.Prelude
                     Data.Prim.ObjId
                     Data.Prim.Geometry
                     Data.Prim.CheckSum
                     Catalog.FilePath
                     Catalog.Cmd
                     Catalog.Cmd.ArchiveCollection
                     Catalog.Cmd.Basic
                     Catalog.Cmd.CopyRemove
                     Catalog.Cmd.CWN
                     Catalog.Cmd.Fold
                     Catalog.Cmd.List
                     Catalog.Cmd.Types
                     Catalog.Html
                     Catalog.Html.Photo2
                     Catalog.Html.Templates.Photo2.AlbumPage
                     Catalog.Rules
                     Catalog.RunImgAction
                     Catalog.Sync
                     Catalog.System.Convert
                     Catalog.System.ExifTool
                     Catalog.System.IO
                     Text.SimpleTemplate
  
  -- Other library packages from which modules are imported.
  build-depends:     base                 >= 4.5
                   , aeson                >= 0.8
                   , aeson-pretty         >= 0.7
                   , bytestring           >= 0.9
                   , containers           >= 0.4
                   , directory            >= 1.1
                   , filepath             >= 1
                   , hxt-regex-xmlschema  >= 9.2
                   , hxt-unicode          >= 9.0
                   , lens                 >= 4.12
                   , monad-error-rws-io   >= 0.0.2
                   , mtl                  >= 2.2
                   , murmur-hash          >= 0.1
                   , process
                   , scientific           >= 0.3
                   , string-qq            >= 0.0.2
                   , text                 >= 1.0
                   , time                 >= 1.5
                   , transformers         >= 0.4
                   , unix                 >= 2.5
                   , unordered-containers >= 0.2
                   , utf8-string          >= 1
                   , vector               >= 0.10

--                   , cmdtheline          >= 0.2
--                   , hxt                 >= 9.3
--                   , pureMD5             >= 2
--                   , pretty              >= 1.1
--                   , SHA                 >= 1.5
                   
  GHC-Options: -Wall -fwarn-tabs
 
executable catserver
  hs-source-dirs:      src
  main-is:             Server/Main.hs
  default-language:    Haskell2010
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       aeson >= 0.9
                     , aeson-pretty >= 0.7
                     , base >=4.7
                     , bytestring >= 0.10
                     , catalog
                     , http-types >= 0.9
                     , hxt-regex-xmlschema >= 9.2
                     , lens >= 4.13
                     , murmur-hash >= 0.1
                     , scientific >= 0.3
                     , scotty
                     , string-qq >= 0.0.2
                     , text
                     , time >= 1.5
                     , unix >= 2.7
                     , unordered-containers >= 0.2
                     , utf8-string >= 1.0
                     , vector >= 0.11
                     , wai >= 3.2
                     , wai-extra >=3.0.0
                     , wai-middleware-static
                     , warp >= 3.2.2
