name:                catalog
version:             0.2.0.0
synopsis:            Image catalog
description:         Please see README.md
homepage:            http://github.com/UweSchmidt/apps/catalog#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:   Data.Catalog
                     Data.MetaData
                     Data.ImgNode
                     Data.ImgTree
                     Data.RefTree
                     Data.ImageStore
                     Data.Prim
                     Data.Prim.CheckSum
                     Data.Prim.Constants
                     Data.Prim.GPS
                     Data.Prim.Geometry
                     Data.Prim.ImageType
                     Data.Prim.Name
                     Data.Prim.Path
                     Data.Prim.PathId
                     Data.Prim.Prelude
                     Data.Prim.ObjId
                     Data.Prim.SysPath
                     Data.Prim.TimeStamp
                     Catalog.FilePath
                     Catalog.Cmd
                     Catalog.Cmd.ArchiveCollection
                     Catalog.Cmd.Basic
                     Catalog.Cmd.CopyRemove
                     Catalog.Cmd.CWN
                     Catalog.Cmd.Fold
                     Catalog.Cmd.Invariant
                     Catalog.Cmd.List
                     Catalog.Cmd.Types
                     Catalog.Html.Basic
                     Catalog.Html.Templates.Blaze2
                     Catalog.JsonCommands
                     Catalog.Journal
                     Catalog.Options
                     Catalog.Sync
                     Catalog.System.CatalogIO
                     Catalog.System.Convert
                     Catalog.System.ExifTool
                     Catalog.System.IO
                     Catalog.Workflow
                     Text.SimpleParser
                     
  -- Other library packages from which modules are imported.
  build-depends:     base                 >= 4.5
                   , blaze-html
                   , aeson                >= 0.8
                   , aeson-pretty         >= 0.8
                   , bytestring           >= 0.9
                   , containers           >= 0.4
                   , directory            >= 1.1
                   , filepath             >= 1
                   , lens                 >= 4.12
                   , monad-reader-state-err-io
                   , mtl                  >= 2.2
                   , murmur-hash          >= 0.1
                   , optparse-applicative
                   , megaparsec
                   , pureMD5              >= 2
                   , process
                   , scientific           >= 0.3
                   , text                 >= 1.0
                   , time                 >= 1.5
                   , transformers         >= 0.4
                   , unix                 >= 2.5
                   , unordered-containers >= 0.2
                   , utf8-string          >= 1
                   , vector               >= 0.10

--                   , SHA                 >= 1.5
                   
  default-language:    Haskell2010

  GHC-Options: -Wall -fwarn-tabs -funbox-strict-fields
