Name:                dsl-lib
Version:             0.0.1
Synopsis:            Some useful code for building DSLs and interpreters
Description:         Some useful code for building DSLs and interpreters
License:             BSD3
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

-- ------------------------------------------------------------

executable testDSL
  main-is:           TestDSL.hs

  Other-Modules:       DSL.CommandLoop
                     , DSL.ReadLineLoop
                     , DSL.Base
  
  Hs-Source-Dirs:    ./src

  Ghc-Options:       -Wall -fwarn-tabs

  Extensions:        MultiParamTypeClasses FunctionalDependencies FlexibleInstances

  Build-depends:       base                        >= 4 && < 5
                     , monad-reader-state-io-error >= 0 && < 1
                     , mtl                         >= 2
                     , haskeline                   >= 0.6.4
                     , parsec                      >= 3 && < 4

-- ------------------------------------------------------------
