name:                fgs2

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.7.1
synopsis:            find, grep, sed, hash: processing directory trees
description:         Program for processing whole directory trees.
                     Includes find, grep, sed functionality.
                     Further functionality: Generation and check
                     of hashes for file contents.
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           Uwe Schmidt, 2012 -
category:            System
build-type:          Simple

cabal-version:       >=1.8


executable fgs2
  hs-source-dirs:    .

  -- .hs or .lhs file containing the Main module.
  main-is:           FindGrepSedHash.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:     System.DirTree.CmdTheLine
                   , System.DirTree.Core
                   , System.DirTree.FilePath
                   , System.DirTree.FileSystem
                   , System.DirTree.FindExpr
                   , System.DirTree.Hash
                   , System.DirTree.Types
                   , Control.Monad.RWSErrorIO
  
  -- Other library packages from which modules are imported.
  build-depends:     base                >= 4.5
                   , bytestring          >= 0.9
                   , cmdtheline          >= 0.2
                   , containers          >= 0.4
                   , directory           >= 1.1
                   , hxt                 >= 9.3
                   , hxt-regex-xmlschema >= 9.2
                   , hxt-unicode         >= 9.0
                   , monad-error-rws-io  >= 0.0.2
                   , mtl                 >= 2.2
                   , pureMD5             >= 2
                   , pretty              >= 1.1
                   , process
                   , SHA                 >= 1.5
                   , unix                >= 2.5
  
  GHC-Options: -Wall -fwarn-tabs
