name:                finite-automaton
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/UweSchmidt/finite-automaton#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           Uwe Schmidt
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regex.Parse
                     , Regex.Core
                     , Automaton.Types
                     , Automaton.Run
                     , Automaton.ScanSpec
                     , Automaton.Transform
                     , Automaton.GenCode
                     , Automaton.GenDot
                     , Data.Set.Simple
                     , Data.Set.Simple.Core
                     , Data.Set.Simple.Partitions
                     , Data.Map.Simple
                     , Data.Map.Simple.Core
                     , Text.Utils

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec >= 2.1 && < 4

  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable finite-automaton
  hs-source-dirs:      app
  main-is:             Main.hs

  other-modules:       System.Console.CmdTheLine.Utils
                     , Examples

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs

  build-depends:       base
                     , finite-automaton
                     , monad-error-rws-io >= 0.1
                     , cmdtheline         >= 0.3
                     , pretty             >= 1.1
                     , transformers
                     , filepath

  default-language:    Haskell2010

test-suite finite-automaton-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , finite-automaton
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/finite-automaton
