Name:                monad-error-rws-io
Version:             0.0.2
Synopsis:            Reader Writer State IO Error Monad
Description:         Reader Writer State IO Error Monad
License:             BSD3
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           2012 Uwe Schmidt
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:   Control.Monad.RWSErrorIO

  Hs-Source-Dirs:    .

  ghc-options: -Wall -fwarn-tabs

  extensions: MultiParamTypeClasses FunctionalDependencies FlexibleInstances

  Build-depends:       base          >= 4   && < 5
                     , process       >= 1.1
                     , mtl           >= 2.1
                     , transformers  >= 0.3

test-suite rws-e-io
  main-is:             RWSTest.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  ghc-options:         -Wall  -fwarn-tabs
