Name:                monad-error-rws-io
Version:             0.1.0
Synopsis:            Reader Writer State IO Error Monad
Description:         Reader Writer State IO Error Monad
License:             BSD3
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           2012 Uwe Schmidt
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Exposed-modules:   Control.Monad.RWSErrorIO

  Hs-Source-Dirs:    .

  ghc-options: -Wall -fwarn-tabs

  extensions: MultiParamTypeClasses FunctionalDependencies FlexibleInstances

  Build-depends:       base          >= 4   && < 5
                     , process       >= 1.2
                     , mtl           >= 2.2
                     , transformers  >= 0.4

