name:                ppl
version:             0.1.0.2
-- please run: make version when incrementing the version number
synopsis:            Compiler construction example for a DSL to process pictures
author:              Uwe Schmidt
maintainer:          si@fh-wedel.de
copyright:           2006 - 2016 Uwe Schmidt
category:            Compiler, Graphics
build-type:          Simple
extra-source-files:
  stack.yaml
  README
  Makefile
  src/PPL/Makefile
  src/PPL/Parser.info1
  examples/Makefile
  examples/org/*.jpg
  examples/org/*.pgm
  examples/org/*.ppm
  examples/org/*.png
  examples/*.ppl
  examples/java/ppl/*.java
  examples/c/*.h

cabal-version:       >=1.10

executable pplc
  main-is:
    PPL.hs

  other-modules:       
    PPL.Parser
    ImgFct.Image
    Matrix.Matrix
    Matrix.Picture
    Matrix.Ppm
    PPL.AbstractSyntax
    PPL.Assemble
    PPL.BuiltinFunctions
    PPL.CodeGeneration
    PPL.ControlUnit
    PPL.Error
    PPL.GlobalState
    PPL.Instructions
    PPL.Lexer
    PPL.Loader
    PPL.MachineArchitecture
    PPL.MicroCode
    PPL.NTree
    PPL.OPCode
    PPL.OptimizeInstr
    PPL.Parser
    PPL.Picture
    PPL.PPLInterpreter
    PPL.SemanticAnalysis
    PPL.ShowAbstractSyntaxTree
    PPL.ShowAttrTree
    PPL.ShowCCode
    PPL.ShowCode
    PPL.ShowJavaCode
    PPL.ShowMS
    PPL.StateTrans
    PPL.Symbol

  -- other-extensions:    
  build-depends:       base       >=4.6
                     , array      >=0.4
                     , bytestring >=0.10
                     , filepath   >=1.3
                     , directory  >=1.2
  hs-source-dirs:      src
  build-tools:         happy
  default-language:    Haskell2010
  ghc-options: -Wall -fwarn-tabs -rtsopts

