cabal-version:      2.4
name:               puzzle-lib
version:            0.1.0.0
synopsis:           Tools for solving puzzles and board games
description:        Tools for solving puzzles and board games
author:             Uwe Schmidt
maintainer:         uwe@fh-wedel.de
category:           puzzles and games
extra-source-files: CHANGELOG.md
build-type:         Simple

library
    exposed-modules:  Data.Board
                      Data.PriorityQueue.Heap
                      Data.PriorityQueue.List
                      Algorithms.AStar
                                            
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4
                    , containers
                    , lens
                    , linear
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveFunctor
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      LambdaCase
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      TypeSynonymInstances
    ghc-options:
      -Wall -fwarn-tabs -O2 -funbox-strict-fields
      -- -flate-specialise
      -- -fspecialise-aggressively
