name:                catalog-servant
version:             0.1.0.0
synopsis:            Servant server for catalog
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           2018 Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable catalog-servant
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       API

  build-depends:       base >= 4.7
                     , base-compat
                     , blaze-html
                     , bytestring
                     , catalog
                     , directory
                     , filepath
                     , ghc-prim
                     , http-api-data
--                     , http-client
                     , http-media
                     , monad-reader-state-err-io
                     , mtl
                     , servant
                     , servant-server
                     , text
                     , wai
                     , wai-app-static
                     , wai-logger
                     , warp

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog
